force-app/main/default/objects/copado__User_Story__c/fields/Lead_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Hours__c</fullName>
    <formula>(Datetime_Deployed_To_Production__c  -  Datetime_Completed__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>