force-app/main/default/objects/copado__User_Story__c/fields/Lead_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Minutes__c</fullName>
    <formula>(Datetime_Deployed_To_Production__c  -  Datetime_Completed__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>