force-app/main/default/objects/copado__User_Story__c/fields/Number_Of_Components__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Components__c</fullName>
    <description>Displays the number of components currently linked to the User Story.</description>
    <label>Number Of Components</label>
    <summaryForeignKey>copado__User_Story_Metadata__c.copado__User_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>