force-app/main/default/objects/copado__User_Story__c/validationRules/Pull_Request_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Pull_Request_Approved</fullName>
    <active>false</active>
    <description>This enforces that a pull request for this User Story must first be approved before the User Story can be marked as &quot;Promote Change&quot; or &quot;Promote &amp; Deploy&quot;. The checkbox Pull Request Approved must equal true,</description>
    <errorConditionFormula>AND( 
OR( 
AND( 
PRIORVALUE(copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true 
), 
AND( 
PRIORVALUE(copado__Promote_and_Deploy__c) = false, 
copado__Promote_and_Deploy__c = true 
) 
), 
 copado__Pull_Requests_Approved__c = false
)</errorConditionFormula>
    <errorMessage>A pull request must first be approved in order to promote this User Story.</errorMessage>
</ValidationRule>