force-app/main/default/objects/copado__User_Story__c/validationRules/Static_Code_Analysis_Results.validationRule-meta.xml
<ValidationRule>
    <fullName>Static_Code_Analysis_Results</fullName>
    <active>true</active>
    <description>This enforces any sort of conditions you may want on the Static Code Analysis results of a User Story (i.e. whether they have to be run and/or achieve certain results). What is written here is that the SCA Score cannot be blank or greater than zero.</description>
    <errorConditionFormula>AND(
copado__Has_Apex_Code__c = true,
OR( 
AND( 
PRIORVALUE(copado__Promote_Change__c) = false, 
copado__Promote_Change__c = true 
), 
AND( 
PRIORVALUE(copado__Promote_and_Deploy__c) = false, 
copado__Promote_and_Deploy__c = true 
) 
), 
OR( 
ISBLANK( SCA_Score__c ), 
SCA_Score__c &gt; 0 
) 
)</errorConditionFormula>
    <errorMessage>Static Code Analysis has either not been run or the SCA Score is too high.</errorMessage>
</ValidationRule>